Mise à jour 2025: amélioration de l'équité des admissions internat quand les voeux sont hiérarchisés + en GDD seuls les voeux archivés en attente dont démissionnables automatiquement