@@ -4,7 +4,6 @@ import fr.parcoursup.algos.exceptions.VerificationException;
 import fr.parcoursup.algos.propositions.Helpers;
 import fr.parcoursup.algos.propositions.algo.*;
 import org.junit.Test;
-import org.powermock.reflect.Whitebox;
 
 
 import java.lang.reflect.Constructor;
@@ -33,73 +32,71 @@ public class TestAlgoAffichages {
     public void mettreAJourAffichage_doit_reussir() throws Exception {
         Parametres p = new Parametres(1, 60, 90);
         AlgoPropositionsSortie sortie = new AlgoPropositionsSortie(p);
-        GroupeAffectation g = new GroupeAffectation(2, new GroupeAffectationUID(1, 1, 1), 2, 2, p);
+        GroupeAffectation g = new GroupeAffectation(2, new GroupeAffectationUID(1, 1, 1), 2, 2, 0, p);
         GroupeInternat gi = new GroupeInternat(new GroupeInternatUID(1, g.id.gTaCod), 2);
 
-        Voeu v1 = Helpers.creeVoeuSansInternatEtInjecteDependances(1,g, Voeu.StatutVoeu.PROPOSITION_DU_JOUR,1);
-        Voeu v2 = Helpers.creeVoeuSansInternatEtInjecteDependances(2,g, Voeu.StatutVoeu.PROPOSITION_DU_JOUR,2);
+        Voeu v1 = Helpers.creeVoeuSansInternatEtInjecteDependances(1,g, StatutVoeu.PROPOSITION_DU_JOUR,1);
+        Voeu v2 = Helpers.creeVoeuSansInternatEtInjecteDependances(2,g, StatutVoeu.PROPOSITION_DU_JOUR,2);
         // Voeu avec internat du candidat du v1 qui a déjà été accepté sans internat
-        Voeu v3 = Helpers.creeVoeuAvecInternatEtInjecteDependances(v1.id.gCnCod, g, gi, Voeu.StatutVoeu.EN_ATTENTE_DE_PROPOSITION, v1.ordreAppel, 3);
+        Voeu v3 = Helpers.creeVoeuAvecInternat(v1.id.gCnCod, g, gi, StatutVoeu.EN_ATTENTE_DE_PROPOSITION, v1.ordreAppel, 3);
         // Voeu avec internat du candidat du v2 qui a déjà été accepté sans internat
-        Voeu v4 = Helpers.creeVoeuAvecInternatEtInjecteDependances(v2.id.gCnCod, g, gi, Voeu.StatutVoeu.EN_ATTENTE_DE_PROPOSITION, v1.ordreAppel, 4);
+        Voeu v4 = Helpers.creeVoeuAvecInternat(v2.id.gCnCod, g, gi, StatutVoeu.EN_ATTENTE_DE_PROPOSITION, v1.ordreAppel, 4);
 
-        Set<VoeuUID> voeuxAvecPropositionDansMemeFormation = new HashSet<>(Arrays.asList(v3.id, v4.id));
         Set<VoeuUID> propositionsDuJour = new HashSet<>(Arrays.asList(v3.id, v4.id));
 
         sortie.groupes.add(g);
         sortie.internats.add(gi);
+		sortie.barresAdmissionInternats.put(gi.id, 100);
         sortie.voeux.addAll(Arrays.asList(v1, v2, v3, v4));
 
-        AlgosAffichages.mettreAJourAffichages(sortie, voeuxAvecPropositionDansMemeFormation, propositionsDuJour);
+        AlgosAffichages.mettreAJourAffichages(sortie, propositionsDuJour);
     }
 
     @Test(expected = Test.None.class /* no exception expected */)
     public void mettreAJourAffichage_doit_reussirSiVoeuAffecteJoursPrecedents() throws Exception {
         Parametres p = new Parametres(1, 60, 90);
         AlgoPropositionsSortie sortie = new AlgoPropositionsSortie(p);
-        GroupeAffectation g = new GroupeAffectation(2, new GroupeAffectationUID(1, 1, 1), 2, 2, p);
+        GroupeAffectation g = new GroupeAffectation(2, new GroupeAffectationUID(1, 1, 1), 2, 2, 0, p);
         GroupeInternat gi = new GroupeInternat(new GroupeInternatUID(1, g.id.gTaCod), 2);
 
-        Voeu v1 = Helpers.creeVoeuSansInternatEtInjecteDependances(1, g, Voeu.StatutVoeu.PROPOSITION_JOURS_PRECEDENTS_ACCEPTEE, 1);
-        Voeu v3 = Helpers.creeVoeuAvecInternatEtInjecteDependances(v1.id.gCnCod, g , gi, Voeu.StatutVoeu.EN_ATTENTE_DE_PROPOSITION, v1.ordreAppel, 3);
+        Voeu v1 = Helpers.creeVoeuSansInternatEtInjecteDependances(1, g, StatutVoeu.PROPOSITION_JOURS_PRECEDENTS_ACCEPTEE, 1);
+        Voeu v3 = Helpers.creeVoeuAvecInternat(v1.id.gCnCod, g , gi, StatutVoeu.EN_ATTENTE_DE_PROPOSITION, v1.ordreAppel, 3);
 
-        Set<VoeuUID> voeuxAvecPropositionDansMemeFormation = new HashSet<>(Collections.singletonList(v3.id));
         Set<VoeuUID> propositionsDuJour = new HashSet<>(Collections.singletonList(v3.id));
 
         sortie.groupes.add(g);
         sortie.internats.add(gi);
         sortie.voeux.addAll(Arrays.asList(v1, v3));
+		sortie.barresAdmissionInternats.put(gi.id, 100);
 
-        AlgosAffichages.mettreAJourAffichages(sortie, voeuxAvecPropositionDansMemeFormation, propositionsDuJour);
+        AlgosAffichages.mettreAJourAffichages(sortie, propositionsDuJour);
     }
 
     @Test(expected = Test.None.class /* no exception expected */)
     public void mettreAJourRangsListeAttente_doit_reussirSiVoeuPasDansVoeuxAvecPropositionDansMemeFormation() throws Exception {
         Parametres p = new Parametres(1, 60, 90);
         AlgoPropositionsSortie sortie = new AlgoPropositionsSortie(p);
-        GroupeAffectation g = new GroupeAffectation(2, new GroupeAffectationUID(1, 1, 1), 2, 2, p);
+        GroupeAffectation g = new GroupeAffectation(2, new GroupeAffectationUID(1, 1, 1), 2, 2, 0, p);
         GroupeInternat gi = new GroupeInternat(new GroupeInternatUID(1, g.id.gTaCod), 2);
 
-        Voeu v1 = Helpers.creeVoeuSansInternatEtInjecteDependances(1 , g, Voeu.StatutVoeu.PROPOSITION_DU_JOUR, 1);
-        Voeu v2 = Helpers.creeVoeuSansInternatEtInjecteDependances(2, g, Voeu.StatutVoeu.EN_ATTENTE_DE_PROPOSITION, 2);
+        Voeu v1 = Helpers.creeVoeuSansInternatEtInjecteDependances(1 , g, StatutVoeu.PROPOSITION_DU_JOUR, 1);
+        Voeu v2 = Helpers.creeVoeuSansInternatEtInjecteDependances(2, g, StatutVoeu.EN_ATTENTE_DE_PROPOSITION, 2);
 
-        Voeu v3 = Helpers.creeVoeuAvecInternatEtInjecteDependances(v1.id.gCnCod, g, gi, Voeu.StatutVoeu.EN_ATTENTE_DE_PROPOSITION, v1.ordreAppel, 3);
-        Voeu v4 = Helpers.creeVoeuAvecInternatEtInjecteDependances(v2.id.gCnCod, g, gi, Voeu.StatutVoeu.EN_ATTENTE_DE_PROPOSITION, v2.ordreAppel, 4);
+        Voeu v3 = Helpers.creeVoeuAvecInternat(v1.id.gCnCod, g, gi, StatutVoeu.EN_ATTENTE_DE_PROPOSITION, v1.ordreAppel, 3);
+        Voeu v4 = Helpers.creeVoeuAvecInternat(v2.id.gCnCod, g, gi, StatutVoeu.EN_ATTENTE_DE_PROPOSITION, v2.ordreAppel, 4);
 
-        Set<VoeuUID> voeuxAvecPropositionDansMemeFormation = new HashSet<>(Arrays.asList(v3.id, v4.id));
         Set<VoeuUID> propositionsDuJour = new HashSet<>(Collections.emptyList());
 
         sortie.groupes.add(g);
         sortie.internats.add(gi);
         sortie.voeux.addAll(Arrays.asList(v1, v2, v3, v4));
 
-        Whitebox.invokeMethod(
-            AlgosAffichages.class,
-            "mettreAJourRangsListeAttente",
-            Arrays.asList(v1, v2, v3, v4),  // Les voeux du GroupeAffectation g
-            voeuxAvecPropositionDansMemeFormation,
-            propositionsDuJour,0,g
-        );
+		AlgosAffichages.mettreAJourRangsListeAttente(
+				Arrays.asList(v1, v2, v3, v4),  // Les voeux du GroupeAffectation g
+				propositionsDuJour,
+				0,
+				g
+		);
     }
 
 
@@ -107,20 +104,19 @@ public class TestAlgoAffichages {
     @Test(expected = Test.None.class /* no exception expected */)
     public void mettreAJourRangDernierAppeleAffiche_doit_reussirPourGroupeAffectationAvecVoeuEnAttenteSansDemandeInternat() throws Exception {
         Parametres p = new Parametres(1, 60, 90);
-        GroupeAffectation g = new GroupeAffectation(2, new GroupeAffectationUID(1, 1, 1), 2, 2, p);
+        GroupeAffectation g = new GroupeAffectation(2, new GroupeAffectationUID(1, 1, 1), 2, 2, 0, p);
         GroupeInternat gi = new GroupeInternat(new GroupeInternatUID(1, g.id.gTaCod), 2);
 
-        Voeu v1 = Helpers.creeVoeuSansInternatEtInjecteDependances(1, g, Voeu.StatutVoeu.PROPOSITION_DU_JOUR, 1);
-        Voeu v2 = Helpers.creeVoeuSansInternatEtInjecteDependances(2, g, Voeu.StatutVoeu.PROPOSITION_DU_JOUR, 2);
-        Voeu v3 = Helpers.creeVoeuAvecInternatEtInjecteDependances(v1.id.gCnCod, g, gi, Voeu.StatutVoeu.EN_ATTENTE_DE_PROPOSITION,  v1.ordreAppel, 1 );
-        Voeu v4 = Helpers.creeVoeuAvecInternatEtInjecteDependances(v2.id.gCnCod, g, gi, Voeu.StatutVoeu.EN_ATTENTE_DE_PROPOSITION,  v2.ordreAppel, 4 );
+        Voeu v1 = Helpers.creeVoeuSansInternatEtInjecteDependances(1, g, StatutVoeu.PROPOSITION_DU_JOUR, 1);
+        Voeu v2 = Helpers.creeVoeuSansInternatEtInjecteDependances(2, g, StatutVoeu.PROPOSITION_DU_JOUR, 2);
+        Voeu v3 = Helpers.creeVoeuAvecInternat(v1.id.gCnCod, g, gi, StatutVoeu.EN_ATTENTE_DE_PROPOSITION,  v1.ordreAppel, 1 );
+        Voeu v4 = Helpers.creeVoeuAvecInternat(v2.id.gCnCod, g, gi, StatutVoeu.EN_ATTENTE_DE_PROPOSITION,  v2.ordreAppel, 4 );
 
-        Whitebox.invokeMethod(
-            AlgosAffichages.class,
-            "mettreAJourRangDernierAppeleAffiche",
-            g,
-            Arrays.asList(v1, v2, v3, v4)  // Les voeux du GroupeAffectation g
-        );
+		AlgosAffichages.mettreAJourRangDernierAppeleAffiche(
+				gi,
+				List.of(v1, v2, v3, v4),
+				List.of(g.id)
+		);
     }
 
     
@@ -128,17 +124,17 @@ public class TestAlgoAffichages {
     @Test
     public void testCalculrangListeAttente() throws VerificationException {
     	 Parametres p = new Parametres(1, 60, 90);
-    	 GroupeAffectation g = new GroupeAffectation(2, new GroupeAffectationUID(1, 1, 1), 2, 2, p);
+    	 GroupeAffectation g = new GroupeAffectation(2, new GroupeAffectationUID(1, 1, 1), 2, 2, 0, p);
     	  
 
-    	Voeu v1 = Helpers.creeVoeuSansInternatEtInjecteDependances(1, g, Voeu.StatutVoeu.EN_ATTENTE_DE_PROPOSITION, 1);
-    	Voeu v2 = Helpers.creeVoeuSansInternatEtInjecteDependances(2, g, Voeu.StatutVoeu.EN_ATTENTE_DE_PROPOSITION, 2);
-    	Voeu v3 = Helpers.creeVoeuSansInternatEtInjecteDependances(3, g, Voeu.StatutVoeu.EN_ATTENTE_DE_PROPOSITION, 3);
-    	Voeu v4 = Helpers.creeVoeuSansInternatEtInjecteDependances(4, g, Voeu.StatutVoeu.EN_ATTENTE_DE_PROPOSITION, 4);
-    	Voeu v5 = Helpers.creeVoeuSansInternatEtInjecteDependances(5, g, Voeu.StatutVoeu.EN_ATTENTE_DE_PROPOSITION, 5);
-    	Voeu v6 = Helpers.creeVoeuSansInternatEtInjecteDependances(6, g, Voeu.StatutVoeu.EN_ATTENTE_DE_PROPOSITION, 6);
-    	Voeu v7 = Helpers.creeVoeuSansInternatEtInjecteDependances(7, g, Voeu.StatutVoeu.EN_ATTENTE_DE_PROPOSITION, 7);
-    	Voeu v8 = Helpers.creeVoeuSansInternatEtInjecteDependances(8, g, Voeu.StatutVoeu.EN_ATTENTE_DE_PROPOSITION, 8);
+    	Voeu v1 = Helpers.creeVoeuSansInternatEtInjecteDependances(1, g, StatutVoeu.EN_ATTENTE_DE_PROPOSITION, 1);
+    	Voeu v2 = Helpers.creeVoeuSansInternatEtInjecteDependances(2, g, StatutVoeu.EN_ATTENTE_DE_PROPOSITION, 2);
+    	Voeu v3 = Helpers.creeVoeuSansInternatEtInjecteDependances(3, g, StatutVoeu.EN_ATTENTE_DE_PROPOSITION, 3);
+    	Voeu v4 = Helpers.creeVoeuSansInternatEtInjecteDependances(4, g, StatutVoeu.EN_ATTENTE_DE_PROPOSITION, 4);
+    	Voeu v5 = Helpers.creeVoeuSansInternatEtInjecteDependances(5, g, StatutVoeu.EN_ATTENTE_DE_PROPOSITION, 5);
+    	Voeu v6 = Helpers.creeVoeuSansInternatEtInjecteDependances(6, g, StatutVoeu.EN_ATTENTE_DE_PROPOSITION, 6);
+    	Voeu v7 = Helpers.creeVoeuSansInternatEtInjecteDependances(7, g, StatutVoeu.EN_ATTENTE_DE_PROPOSITION, 7);
+    	Voeu v8 = Helpers.creeVoeuSansInternatEtInjecteDependances(8, g, StatutVoeu.EN_ATTENTE_DE_PROPOSITION, 8);
     	
     	List<Voeu> listeVoeux = new ArrayList<>();
     	listeVoeux.add(v1);
@@ -156,8 +152,8 @@ public class TestAlgoAffichages {
          int nbJour = 1;
          
          /* On commence au jour 1*/
-    	AlgosAffichages.mettreAJourRangsListeAttente(listeVoeux, 
-    			voeuxAvecPropositionDansMemeFormation, propositionsDuJour, nbJour,g);
+    	AlgosAffichages.mettreAJourRangsListeAttente(listeVoeux,
+                propositionsDuJour, nbJour,g);
     	
     	System.out.println("--------------DEPART JOUR 1-------------------------");
     	afficherResultat(listeVoeux);
@@ -167,7 +163,7 @@ public class TestAlgoAffichages {
     	System.out.println("------------Le 1 et 2 ont une proposition -----------------");
     	listeVoeux.remove(v1);
     	listeVoeux.remove(v2);
-    	AlgosAffichages.mettreAJourRangsListeAttente(listeVoeux, voeuxAvecPropositionDansMemeFormation, propositionsDuJour, nbJour,g);
+    	AlgosAffichages.mettreAJourRangsListeAttente(listeVoeux, propositionsDuJour, nbJour,g);
     	afficherResultat(listeVoeux);
     	
     	
@@ -177,7 +173,7 @@ public class TestAlgoAffichages {
     	listeVoeux.remove(v5);
     	listeVoeux.remove(v6);
 
-    	AlgosAffichages.mettreAJourRangsListeAttente(listeVoeux, voeuxAvecPropositionDansMemeFormation, propositionsDuJour, nbJour,g);
+    	AlgosAffichages.mettreAJourRangsListeAttente(listeVoeux, propositionsDuJour, nbJour,g);
     	afficherResultat(listeVoeux);
 
     	
@@ -186,7 +182,7 @@ public class TestAlgoAffichages {
     	listeVoeux.add(v5);
     	v5.setRangListeAttenteVeille(0);
     	
-    	AlgosAffichages.mettreAJourRangsListeAttente(listeVoeux, voeuxAvecPropositionDansMemeFormation, propositionsDuJour, nbJour,g);
+    	AlgosAffichages.mettreAJourRangsListeAttente(listeVoeux, propositionsDuJour, nbJour,g);
     	afficherResultat(listeVoeux);
     	
     	
@@ -194,16 +190,9 @@ public class TestAlgoAffichages {
      	System.out.println("------------Le 6 réintégré  -----------------");
     	listeVoeux.add(v6);
     	v6.setRangListeAttenteVeille(0);
-    	AlgosAffichages.mettreAJourRangsListeAttente(listeVoeux, voeuxAvecPropositionDansMemeFormation, propositionsDuJour, nbJour,g);
+    	AlgosAffichages.mettreAJourRangsListeAttente(listeVoeux, propositionsDuJour, nbJour,g);
     	afficherResultat(listeVoeux);
-
-    	
-//       	nbJour = 6;
-//     	System.out.println("------------FIN  -----------------");
-//    	AlgosAffichages.mettreAJourRangsListeAttente(listeVoeux, voeuxAvecPropositionDansMemeFormation, propositionsDuJour, nbJour);
-//    	afficherResultat(listeVoeux);
-
-    }
+	}
     
     
     
@@ -211,28 +200,28 @@ public class TestAlgoAffichages {
     @Test
     public void test2CalculrangListeAttente() throws VerificationException {
     	 Parametres p = new Parametres(1, 60, 90);
-    	 GroupeAffectation g = new GroupeAffectation(2, new GroupeAffectationUID(1, 1, 1), 2, 2, p);
+    	 GroupeAffectation g = new GroupeAffectation(2, new GroupeAffectationUID(1, 1, 1), 2, 2, 0, p);
     	  
 
-    	Voeu v1 = Helpers.creeVoeuSansInternatEtInjecteDependances(1, g, Voeu.StatutVoeu.EN_ATTENTE_DE_PROPOSITION, 1);
+    	Voeu v1 = Helpers.creeVoeuSansInternatEtInjecteDependances(1, g, StatutVoeu.EN_ATTENTE_DE_PROPOSITION, 1);
     	v1.setRangListeAttenteVeille(3);
     	
-    	Voeu v2 = Helpers.creeVoeuSansInternatEtInjecteDependances(2, g, Voeu.StatutVoeu.EN_ATTENTE_DE_PROPOSITION, 2);
+    	Voeu v2 = Helpers.creeVoeuSansInternatEtInjecteDependances(2, g, StatutVoeu.EN_ATTENTE_DE_PROPOSITION, 2);
     	v2.setRangListeAttenteVeille(4);
     	
-    	Voeu v3 = Helpers.creeVoeuSansInternatEtInjecteDependances(3, g, Voeu.StatutVoeu.EN_ATTENTE_DE_PROPOSITION, 3);
+    	Voeu v3 = Helpers.creeVoeuSansInternatEtInjecteDependances(3, g, StatutVoeu.EN_ATTENTE_DE_PROPOSITION, 3);
      	v3.setRangListeAttenteVeille(5);
      	
-    	Voeu v4 = Helpers.creeVoeuSansInternatEtInjecteDependances(4, g, Voeu.StatutVoeu.EN_ATTENTE_DE_PROPOSITION, 4);
+    	Voeu v4 = Helpers.creeVoeuSansInternatEtInjecteDependances(4, g, StatutVoeu.EN_ATTENTE_DE_PROPOSITION, 4);
     	v4.setRangListeAttenteVeille(6);
     	
-    	Voeu v5 = Helpers.creeVoeuSansInternatEtInjecteDependances(5, g, Voeu.StatutVoeu.EN_ATTENTE_DE_PROPOSITION, 5);
+    	Voeu v5 = Helpers.creeVoeuSansInternatEtInjecteDependances(5, g, StatutVoeu.EN_ATTENTE_DE_PROPOSITION, 5);
     	v5.setRangListeAttenteVeille(0);
     	
-    	Voeu v6 = Helpers.creeVoeuSansInternatEtInjecteDependances(6, g, Voeu.StatutVoeu.EN_ATTENTE_DE_PROPOSITION, 6);
+    	Voeu v6 = Helpers.creeVoeuSansInternatEtInjecteDependances(6, g, StatutVoeu.EN_ATTENTE_DE_PROPOSITION, 6);
     	v6.setRangListeAttenteVeille(8);
     	
-    	Voeu v7 = Helpers.creeVoeuSansInternatEtInjecteDependances(7, g, Voeu.StatutVoeu.EN_ATTENTE_DE_PROPOSITION, 7);
+    	Voeu v7 = Helpers.creeVoeuSansInternatEtInjecteDependances(7, g, StatutVoeu.EN_ATTENTE_DE_PROPOSITION, 7);
     	v7.setRangListeAttenteVeille(9);
     	
     	List<Voeu> listeVoeux = new ArrayList<>();
@@ -250,7 +239,7 @@ public class TestAlgoAffichages {
          int nbJour = 3;
          
          /* On commence au jour 1*/
-    	AlgosAffichages.mettreAJourRangsListeAttente(listeVoeux, voeuxAvecPropositionDansMemeFormation, propositionsDuJour, nbJour,g);
+    	AlgosAffichages.mettreAJourRangsListeAttente(listeVoeux, propositionsDuJour, nbJour,g);
     	
     	System.out.println("-----------------DEPART-------------------------");
     	for (Voeu v : listeVoeux) {
